fixed bug with menu in edge; aligned menu content

--- a/sass/blocks/main-nav.scss
+++ b/sass/blocks/main-nav.scss
@@ -1,25 +1,22 @@
 .main-nav {
+  visibility: hidden;
   position: absolute;
   top: 0;
   left: 0;
 
-
+  box-sizing: border-box;
   width: 100%;
   height: 100vh;
 
-  background-color: #000000;
-
-  transform: translateY(-100%);
-  transition: 0.8s;
-}
-
-.main-nav__wrapper {
-  width: 100%;
-  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  background-color: #000000;
+
+  transform: translateY(-100%);
+  transition: transform 0.8s;
 }
 
 .main-nav__list {
